--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser-dynamic": "~9.0.6",
     "@angular/router": "~9.0.6",
     "@angular/service-worker": "~9.0.6",
+    "@ngneat/until-destroy": "^7.1.6",
     "firebase": "^7.15.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
