--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/service-worker": "~9.0.6",
     "@ngneat/until-destroy": "^7.1.6",
     "firebase": "^7.15.1",
+    "ngx-countdown": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
