--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@angular/router": "~9.0.6",
     "@angular/service-worker": "~9.0.6",
     "@ngneat/until-destroy": "^7.1.6",
+    "cors": "^2.8.5",
     "firebase": "^7.15.1",
     "ngx-countdown": "^9.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
+    "web-push": "^3.4.4",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
@@ -37,10 +39,11 @@
     "@angular/cli": "~9.0.6",
     "@angular/compiler-cli": "~9.0.6",
     "@angular/language-service": "~9.0.6",
-    "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
+    "dotenv": "^8.2.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
