--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "dev": "ng serve --host 0.0.0.0 -o",
-    "build": "ng build",
+    "build": "ng build --prod",
+    "serve:prod": "http-server ./dist/lafay-reloaded -c-1 -o",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -44,6 +45,7 @@
     "@types/node": "^12.11.1",
     "codelyzer": "^5.1.2",
     "dotenv": "^8.2.0",
+    "http-server": "^0.12.3",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.3.0",
